--- a/app/src/main/res/layout/layout_bike_action_stepper.xml
+++ b/app/src/main/res/layout/layout_bike_action_stepper.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/stepper"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:paddingTop="24dp"
+        android:paddingBottom="8dp">
 
     <LinearLayout
             android:id="@+id/stepperContainer"
@@ -20,9 +23,12 @@
             android:id="@+id/stepperTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Selecione a bicicleta"
+            tools:text="Selecione a bicicleta"
             android:textAlignment="center"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="@dimen/margin_medium"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            app:layout_constraintTop_toBottomOf="@id/stepperContainer"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
