--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
             android:id="@+id/navigationHome"
-            android:name="app.igormatos.botaprarodar.presentation.main.TripsFragment" />
+            android:name="app.igormatos.botaprarodar.presentation.main.trips.TripsFragment" />
 
     <fragment
             android:id="@+id/navigationUsers"
