--- a/app/src/main/res/layout/item_bike_action_menu.xml
+++ b/app/src/main/res/layout/item_bike_action_menu.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:elevation="2dp">
+        android:elevation="@dimen/card_elevation">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
