Create layout for the final step to return bike

--- a/app/src/main/res/navigation/return_bike_nav_graph.xml
+++ b/app/src/main/res/navigation/return_bike_nav_graph.xml
@@ -10,5 +10,19 @@
             android:id="@+id/returnBikeFragment"
             android:name="app.igormatos.botaprarodar.presentation.returnbicycle.stepOneBikes.StepOneBikesFragment"
             android:label="@string/return_bike_toolbar_title"
-            tools:layout="@layout/fragment_step_one_bikes" />
+            tools:layout="@layout/fragment_step_one_bikes" >
+        <action
+                android:id="@+id/action_returnBikeFragment_to_stepFinalReturnBikeFragment"
+                app:destination="@id/stepFinalReturnBikeFragment"
+                app:enterAnim="@anim/slide_in_right"
+                app:exitAnim="@anim/slide_out_left"
+                app:popEnterAnim="@anim/slide_in_left"
+                app:popExitAnim="@anim/slide_out_right" />
+    </fragment>
+
+    <fragment
+            android:id="@+id/stepFinalReturnBikeFragment"
+            android:name="app.igormatos.botaprarodar.presentation.returnbicycle.stepFinalReturnBike.StepFinalReturnBikeFragment"
+            android:label="StepFinalReturnBikeFragment"
+            tools:layout="@layout/fragment_step_final_return_bike"/>
 </navigation>
