Create tests for te StepOneReturnBikeUseCase

--- a/app/src/main/res/layout/fragment_step_one_return_bike.xml
+++ b/app/src/main/res/layout/fragment_step_one_return_bike.xml
@@ -8,13 +8,13 @@
 
         <variable
                 name="viewModel"
-                type="app.igormatos.botaprarodar.presentation.returnbicycle.stepOneBikes.StepOneReturnBikeFragment" />
+                type="app.igormatos.botaprarodar.presentation.returnbicycle.stepOneReturnBike.StepOneReturnBikeFragment" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".presentation.returnbicycle.stepOneBikes.StepOneReturnBikeFragment">
+            tools:context=".presentation.returnbicycle.stepOneReturnBike.StepOneReturnBikeFragment">
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_bikes_return"
