Create BikeRequest and change the logic to getBikes

--- a/app/src/main/res/layout/fragment_step_final_return_bike.xml
+++ b/app/src/main/res/layout/fragment_step_final_return_bike.xml
@@ -8,7 +8,7 @@
 
         <variable
                 name="viewModel"
-                type="app.igormatos.botaprarodar.presentation.returnbicycle.stepFinalReturnBike.StepFinalReturnBikeFragment" />
+                type="app.igormatos.botaprarodar.presentation.returnbicycle.stepFinalReturnBike.StepFinalReturnBikeViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -22,7 +22,7 @@
                 android:layout_marginStart="@dimen/margin_medium"
                 android:layout_marginTop="@dimen/margin_medium"
                 android:layout_marginEnd="@dimen/margin_medium"
-                android:background="@color/white"
+                android:background="@drawable/rounded_corner"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -32,6 +32,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="180dp"
                     android:scaleType="centerCrop"
+                    app:imagePathOrUrl="@{viewModel.bikeHolder.photoPath}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -43,10 +44,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/margin_medium"
                     android:layout_marginTop="@dimen/margin_medium"
+                    android:text="@{viewModel.bikeHolder.name}"
                     android:textColor="@color/text_gray"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/iv_step_final_return_bike"
-                    tools:text="BatBike" />
+                    tools:text="Monark" />
 
             <TextView
                     android:id="@+id/tv_bike_order_step_final_return_bike"
@@ -54,6 +56,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/margin_medium"
                     android:layout_marginTop="@dimen/margin_medium"
+                    android:text="@{@string/bike_order_number(viewModel.bikeHolder.orderNumber.toString())}"
                     android:textColor="@color/text_gray"
                     app:layout_constraintStart_toEndOf="@+id/tv_bike_name_step_final_return_bike"
                     app:layout_constraintTop_toBottomOf="@+id/iv_step_final_return_bike"
@@ -66,6 +69,7 @@
                     android:layout_marginStart="@dimen/margin_medium"
                     android:layout_marginTop="@dimen/margin_medium"
                     android:layout_marginEnd="@dimen/margin_medium"
+                    android:text="@{@string/bike_series_number(viewModel.bikeHolder.serialNumber)}"
                     android:textColor="@color/text_gray"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -86,6 +90,7 @@
                     android:layout_width="@dimen/circle_image_40"
                     android:layout_height="@dimen/circle_image_40"
                     android:layout_marginStart="@dimen/margin_medium"
+                    app:imagePathOrUrlCircle="@{viewModel.bikeHolder.withdraws[0].user.profilePictureThumbnail}"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_return_date_step_final_return_bike"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/tv_user_name_step_final_return_bike"
@@ -99,6 +104,7 @@
                     android:layout_marginTop="@dimen/margin_medium"
                     android:layout_marginEnd="@dimen/margin_medium"
                     android:maxLength="20"
+                    android:text="@{viewModel.bikeHolder.withdraws[0].user.name}"
                     android:textColor="@color/black"
                     android:textSize="@dimen/text_size_medium"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -112,7 +118,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/margin_medium"
                     android:layout_marginEnd="@dimen/margin_medium"
+                    android:text="@{@string/bike_withdraw_date(viewModel.bikeHolder.withdraws[0].date)}"
                     android:textColor="@color/text_gray"
+                    android:textSize="12sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/iv_user_step_final_return_bike"
                     app:layout_constraintTop_toBottomOf="@id/tv_user_name_step_final_return_bike"
@@ -126,6 +134,8 @@
                     android:layout_marginEnd="@dimen/margin_medium"
                     android:layout_marginBottom="@dimen/margin_medium"
                     android:textColor="@color/text_gray"
+                    android:textSize="12sp"
+                    android:text="@{@string/bike_devolution_date(viewModel.devolutionDate)}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/iv_user_step_final_return_bike"
