--- a/app/src/main/res/navigation/return_bike_nav_graph.xml
+++ b/app/src/main/res/navigation/return_bike_nav_graph.xml
@@ -9,6 +9,9 @@
     <fragment
             android:id="@+id/returnBikeFragment"
             android:name="app.igormatos.botaprarodar.presentation.returnbicycle.stepOneReturnBike.StepOneReturnBikeFragment"
-            android:label="@string/return_bike_toolbar_title"
-            tools:layout="@layout/fragment_step_one_return_bike" />
+            android:label="@string/return_bike_toolbar_title" />
+    <fragment
+            android:id="@+id/returnBikeQuizFragment"
+            android:name="app.igormatos.botaprarodar.presentation.returnbicycle.quiz.ReturnBikeQuizFragment"
+            android:label="ReturnBikeQuizFragment" />
 </navigation>
