refactors and bike withdraw flow

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -7,10 +7,13 @@
 
     <fragment
             android:id="@+id/navigationHome"
-            android:name="app.igormatos.botaprarodar.presentation.main.trips.TripsFragment" >
+            android:name="app.igormatos.botaprarodar.presentation.main.trips.TripsFragment">
         <action
                 android:id="@+id/action_navigationHome_to_returnBikeActivity"
                 app:destination="@id/returnBikeActivity" />
+        <action
+                android:id="@+id/navigateFromHomeToBikeWithDraw"
+                app:destination="@id/bikeWithdrawActivity" />
     </fragment>
 
     <fragment
@@ -25,6 +28,12 @@
             android:name="app.igormatos.botaprarodar.presentation.returnbicycle.ReturnBikeActivity"
             android:label="@string/return_bike_toolbar_title"
             tools:layout="@layout/activity_return_bike" />
+<activity
+            android:id="@+id/bikeWithdrawActivity"
+            android:name="app.igormatos.botaprarodar.presentation.bikewithdraw.BikeWithdrawActivity"
+            android:label="@string/borrow_bike"
+            tools:layout="@layout/activity_bike_withdraw" />
+
 </navigation>
 
 
