--- a/app/src/main/res/layout/activity_rent.xml
+++ b/app/src/main/res/layout/activity_rent.xml
@@ -3,7 +3,7 @@
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            tools:context=".presentation.bicyclewithdrawal.choosebicycle.WithdrawActivity"
+            tools:context=".presentation.bikewithdraw.choosebicycle.WithdrawActivity"
             android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
