Finalize the devolution bike flow

--- a/app/src/main/res/layout/fragment_step_final_return_bike.xml
+++ b/app/src/main/res/layout/fragment_step_final_return_bike.xml
@@ -155,6 +155,7 @@
                 android:padding="@dimen/padding_medium"
                 android:text="@string/confirmar_devolucao"
                 android:textStyle="bold"
+                android:onClick="@{() -> viewModel.finalizeDevolution()}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
