--- a/app/src/main/res/layout/bike_confirmation_bike_info_container.xml
+++ b/app/src/main/res/layout/bike_confirmation_bike_info_container.xml
@@ -14,51 +14,45 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <com.google.android.material.card.MaterialCardView
-                android:id="@+id/bikeInfoContainer"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/default_view_margin"
-                android:layout_marginEnd="@dimen/default_view_margin"
-                android:textAlignment="center"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+            <TextView
+                    android:id="@+id/bikeName"
+                    style="@style/Widget.MaterialComponents.TextView"
+                    bikeNameWithLabel="@{viewModel.bikeName}"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/padding_medium"
+                    android:paddingTop="@dimen/padding_medium"
+                    android:paddingBottom="@dimen/margin_12"
+                    tools:ignore="RtlSymmetry"
+                    tools:text="Monark XY" />
 
-                <TextView
-                        android:id="@+id/bikeName"
-                        style="@style/Widget.MaterialComponents.TextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="@dimen/padding_small"
-                        bikeNameWithLabel="@{viewModel.bikeName}"
+            <TextView
+                    android:id="@+id/orderNumber"
+                    style="@style/Widget.MaterialComponents.TextView"
+                    bikeOrderWithLabel="@{viewModel.bikeOrderNumber}"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/padding_medium"
+                    android:paddingTop="@dimen/padding_medium"
+                    android:paddingBottom="@dimen/margin_12"
+                    tools:ignore="RtlSymmetry"
+                    tools:text="Ordem: XOA-1023" />
 
-                        tools:text="@string/bike_name" />
-
-                <TextView
-                        android:id="@+id/orderNumber"
-                        style="@style/Widget.MaterialComponents.TextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="@dimen/padding_small"
-                        bikeOrderWithLabel="@{viewModel.bikeOrderNumber}"
-                        tools:text="@string/order_number" />
-
-                <TextView
-                        android:id="@+id/serialNumber"
-                        style="@style/Widget.MaterialComponents.TextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="@dimen/padding_small"
-                        bikeSeriesWithLabel="@{viewModel.bikeSeriesNumber}"
-                        tools:text="@string/bike_serial_number" />
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
+            <TextView
+                    android:id="@+id/serialNumber"
+                    style="@style/Widget.MaterialComponents.TextView"
+                    bikeSeriesWithLabel="@{viewModel.bikeSeriesNumber}"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingHorizontal="@dimen/padding_medium"
+                    android:paddingTop="@dimen/padding_medium"
+                    android:paddingBottom="@dimen/margin_12"
+                    tools:text="Série: 098234" />
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
