--- a/app/src/main/res/layout/fragment_bike_confirmation.xml
+++ b/app/src/main/res/layout/fragment_bike_confirmation.xml
@@ -15,47 +15,78 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <ImageView
-                android:id="@+id/bikeImage"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:padding="@dimen/padding_small"
-                android:scaleType="fitXY"
-                app:layout_constraintBottom_toTopOf="@id/bikeInfoContainer"
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_container_step_final_return_bike"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_medium"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginEnd="@dimen/margin_medium"
+                android:background="@drawable/rounded_corner"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:imagePathOrUrl="@{viewModel.bikeImageUrl}"
-                tools:src="@drawable/logo" />
+                app:layout_constraintTop_toTopOf="parent">
 
-        <include
-                android:id="@+id/bikeInfoContainer"
-                layout="@layout/bike_confirmation_bike_info_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/bikeImage"
-                bind:viewModel="@{viewModel}" />
+            <ImageView
+                    android:id="@+id/bikeImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp"
+                    android:scaleType="centerCrop"
+                    app:imagePathOrUrl="@{viewModel.bikeImageUrl}"
+                    app:layout_constraintBottom_toTopOf="@id/bikeInfoContainer"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:src="@tools:sample/avatars" />
 
-        <include
-                android:id="@+id/userInfoContainer"
-                layout="@layout/bike_confirmation_user_info_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/bikeInfoContainer"
-                bind:viewModel="@{viewModel}" />
+            <include
+                    android:id="@+id/bikeInfoContainer"
+                    layout="@layout/bike_confirmation_bike_info_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/bikeImage"
+                    bind:viewModel="@{viewModel}" />
 
-        <com.google.android.material.button.MaterialButton
+            <View
+                    android:id="@+id/divider"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/separator_height"
+                    android:background="@color/background_gray"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/bikeInfoContainer" />
+
+            <include
+                    android:id="@+id/userInfoContainer"
+                    layout="@layout/bike_confirmation_user_info_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/divider"
+                    bind:viewModel="@{viewModel}" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <Button
                 android:id="@+id/confirmButton"
                 style="@style/Widget.MaterialComponents.Button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/margin_medium"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="24dp"
                 android:onClick="@{() -> viewModel.confirmBikeWithdraw()}"
                 android:padding="@dimen/padding_medium"
                 android:text="@string/confirm_withdraw"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/userInfoContainer" />
+                app:layout_constraintTop_toBottomOf="@+id/cl_container_step_final_return_bike"
+                app:layout_constraintVertical_bias="0.0" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
