Change button text from fragment_bike_confirmation

--- a/app/src/main/res/layout/fragment_bike_confirmation.xml
+++ b/app/src/main/res/layout/fragment_bike_confirmation.xml
@@ -81,7 +81,7 @@
                 android:layout_marginBottom="24dp"
                 android:onClick="@{() -> viewModel.confirmBikeWithdraw()}"
                 android:padding="@dimen/padding_medium"
-                android:text="@string/confirm_withdraw"
+                android:text="@string/to_confirm_withdraw"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
